--- a/app/src/main/res/layout/dialog_setup_complete.xml
+++ b/app/src/main/res/layout/dialog_setup_complete.xml
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="14dp">
 
             <TextView
                 android:id="@+id/title"
