--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,29 @@
         <item name="colorControlActivated">@color/translucent_imp</item>
         <item name="colorSwitchThumbNormal">@color/grey</item>
         <item name="android:colorForeground">@color/white</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="alertDialogTheme">@style/popupAppearance</item>
+    </style>
+
+    <style name="popupAppearance" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="android:background">@color/tab_back</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textColorAlertDialogListItem">@color/translucent_imp</item>
+        <item name="buttonBarNeutralButtonStyle">@style/listButton</item>
+        <item name="buttonBarNegativeButtonStyle">@style/listButton</item>
+        <item name="buttonBarPositiveButtonStyle">@style/listButton</item>
+        <item name="android:fontFamily">@font/poppins_400</item>
+    </style>
+
+    <style name="listButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:strokeColor">@color/next_class</item>
+        <item name="strokeColor">@color/next_class</item>
+        <item name="rippleColor">@color/translucent</item>
+        <item name="fontFamily">@font/poppins_400</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
+
     </style>
 
     <style name="TabTextAppearance" parent="">
