fix: saturday class mode logic improved

--- a/app/src/main/res/layout/layout_account_details.xml
+++ b/app/src/main/res/layout/layout_account_details.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:paddingVertical="6dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingVertical="6dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icon"
@@ -14,8 +14,8 @@
         android:layout_height="36dp"
         android:layout_gravity="center"
         android:layout_marginVertical="16dp"
-        android:layout_marginEnd="22dp"
         android:layout_marginStart="14dp"
+        android:layout_marginEnd="22dp"
         android:adjustViewBounds="true"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         tools:src="@tools:sample/avatars" />
@@ -28,18 +28,18 @@
 
         <TextView
             android:id="@+id/title"
-            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
+            android:textSize="16sp"
             tools:text="Yajat Malhotra" />
 
         <TextView
             android:id="@+id/summary"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/translucent"
+            android:textSize="14sp"
             tools:text="me@iamyajat.com" />
     </LinearLayout>
 
