--- a/app/src/main/res/drawable/nav_button_background.xml
+++ b/app/src/main/res/drawable/nav_button_background.xml
@@ -4,7 +4,9 @@
     android:shape="rectangle">
     <corners android:radius="40dp" />
 
-    <stroke android:width="1dp" android:color="@color/translucent" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/translucent" />
 
 
     <solid android:color="@color/transparent" />
