--- a/app/src/main/res/layout/item_period.xml
+++ b/app/src/main/res/layout/item_period.xml
@@ -24,15 +24,32 @@
         android:textColor="@color/white"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/period_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="12dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:text="@string/sample_time"
-        android:textSize="15sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/period_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="5dp"
+            android:text="@string/sample_time"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/room_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="12dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="20dp"
+            android:text="@string/sample_room"
+            android:textSize="15sp" />
+    </LinearLayout>
 
 </LinearLayout>
