--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -14,6 +14,7 @@
             android:clipToPadding="false"
             android:layoutAnimation="@anim/layout_animation"
             android:paddingTop="10dp"
+            tools:listitem="@layout/card_period"
             android:paddingBottom="180dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
