--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <item name="android:fontFamily">@font/poppins_400</item>
         <item name="android:textColor">@color/translucent</item>
         <item name="android:windowBackground">@color/background</item>
-        <item name="android:navigationBarColor">@color/background</item>
+        <item name="android:navigationBarColor">@color/tab_back</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="popupMenuBackground">@drawable/menu_background</item>
     </style>
