feat: requests page

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,8 +14,9 @@
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:background="@color/tab_back"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
+            app:itemIconTint="@drawable/nav_color"
+            app:itemTextColor="@drawable/nav_color"
+            app:itemRippleColor="@color/translucent_ripple"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
