--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#D1D1D1</color>
@@ -9,6 +9,7 @@
     <color name="fab_color">#082F63</color>
     <color name="background">#041727</color>
     <color name="translucent">#688FBC</color>
+    <color name="translucent_ripple">#25688FBC</color>
     <color name="translucent_imp">#9DBADC</color>
     <color name="translucent_head">#C3D4E8</color>
     <color name="border_1">#AD5B7CA1</color>
@@ -17,4 +18,5 @@
     <color name="next_class">#99126AFC</color>
     <color name="next_class_2">#1A126AFC</color>
     <color name="transparent">#00000000</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/translucent</color>
 </resources>
